recursion.lessons.recursion.tree.Tree.scala.error
Tree:2: error: not found: type double
	avance(10:double)
                  ^